# Fast-Exchange

./: CMakeLists.txt  README.md  exchangewidget.cpp  exchangewidget.h  main.cpp
